--- a/sites/faqSites/camping.html
+++ b/sites/faqSites/camping.html
@@ -34,11 +34,13 @@
 
         </div>
 
-        <label class="collapse" for="rules">Camping Rules</label>
+
+
+        <label class="collapse" for="rules" >Camping Rules<img class="plus_img" src="../../img/max/plus.gif"></label>
         <input id="rules" type="checkbox">
         <div class="text_shown">The following things are not allowed on the camp site:</div>
 
-        <label class="collapse" for="food">Food and Drinks at the Camping Site</label>
+        <label class="collapse" for="food">Food&Drinks at Camping<img class="plus_img" src="../../img/max/plus.gif"></label>
         <input id="food" type="checkbox">
         <div class="text_shown">You´re hungry? That´s no problem. There are loads of different Electric Food Bars all over the area.<br>
             <hr>
@@ -48,19 +50,19 @@
             <i>Electric Love Breakfast</i><br>
             Need a good hangover breakfast? You will get it there!</div>
 
-        <label class="collapse" for="garbage">Garbage Deposit</label>
+        <label class="collapse" for="garbage">Garbage Deposi<img class="plus_img" src="../../img/max/plus.gif">t</label>
         <input id="garbage" type="checkbox">
         <div class="text_shown">To realise our goal "the cleanest festival in Austria" we need your help.
             We will ask you for a deposit of € 15,00 at the camping entrance for which you will
             receive a garbage chip. If you bring back a fully filled trash bag and the chip to the exit the
             desposit will be given back to you. Trash bags are available at Info/Lost&Found Stands & the exit.</div>
 
-        <label class="collapse" for="groups">Groups</label>
+        <label class="collapse" for="groups">Groups<img class="plus_img" src="../../img/max/plus.gif"></label>
         <input id="groups" type="checkbox">
         <div class="text_shown">If you want to camp as a group please arrive as a
             group and accept that the security staff is not in charge to merge groups on camping site.</div>
 
-        <label class="collapse" for="opening">Opening Hours</label>
+        <label class="collapse" for="opening">Opening Hours<img class="plus_img" src="../../img/max/plus.gif"></label>
         <input id="opening" type="checkbox">
         <div class="text_shown">Greenfield Camping is open from Wednesday until Sunday:<br>
             <hr>Wednesday: 12h00 – 24h00<br>
@@ -69,12 +71,12 @@
             Saturday: 00h00 – 24h00<br>
             Sunday: 00h00 – 12h00</div>
 
-        <label class="collapse" for="toilet">Toilets / Sanitary Facilities</label>
+        <label class="collapse" for="toilet">Toilets / Sanitary Facilities<img class="plus_img" src="../../img/max/plus.gif"></label>
         <input id="toilet" type="checkbox">
         <div class="text_shown">Using toilets & showers at the Electric Love Festival is free of charge.</div>
 
 
-        <label class="collapse" for="valuable">Valuable Articles</label>
+        <label class="collapse" for="valuable">Valuable Articles<img class="plus_img" src="../../img/max/plus.gif"></label>
         <input id="valuable" type="checkbox">
         <div class="text_shown">You can store your valuable belongings in our lockers without having to worry about loss or theft. We ask for a small contribution for hiring.</div>
 
