--- a/sites/faqSites/festival.html
+++ b/sites/faqSites/festival.html
@@ -34,28 +34,28 @@
         <div class="col-xs-4 header_back"></div>
     </div>
 
-    <label class="collapse" for="application">Application</label>
+    <label class="collapse" for="application">Application<img class="plus_img" src="../../img/max/plus.gif"></label>
     <input id="application" type="checkbox">
     <div class="text_shown">
         <p>For information about the Electric Love Festival use our app "Electric Love" available for
             iOS, Android and other popular providers. It will be around in time for the festival.</p>
     </div>
 
-    <label class="collapse" for="aid">Cancer Aid Association</label>
+    <label class="collapse" for="aid">Cancer Aid Association<img class="plus_img" src="../../img/max/plus.gif"></label>
     <input id="aid" type="checkbox">
     <div class="text_shown">
         <p>For each sold festival ticket the Electric Love Festival donates € 1,00 to the
             Austrian Cancer Aid Association and supports its project "Mama, Papa hat Krebs" (engl. Mom, Dad has Cancer)</p>
     </div>
 
-    <label class="collapse" for="phone">Charge your Mobile Phone</label>
+    <label class="collapse" for="phone">Charge your Mobile Phone<img class="plus_img" src="../../img/max/plus.gif"></label>
     <input id="phone" type="checkbox">
     <div class="text_shown">
         <p>Visit the Electric Love charging station and take one of our Red Bull Energy Packs for a fee to recharge
             your mobile phone. After it is fully charged return the Energy Pack and get your deposit refunded.</p>
     </div>
 
-    <label class="collapse" for="currency">Currency</label>
+    <label class="collapse" for="currency">Currency<img class="plus_img" src="../../img/max/plus.gif"></label>
     <input id="currency" type="checkbox">
     <div class="text_shown">
         <p>There is a special currency at the festival called Electric Love Token which is used for buying food,
@@ -65,32 +65,32 @@
             advance (Token Bag) have a different design and cannot be changed back due to the discount!</p>
     </div>
 
-    <label class="collapse" for="drug">Drugs</label>
+    <label class="collapse" for="drug">Drugs<img class="plus_img" src="../../img/max/plus.gif"></label>
     <input id="drug" type="checkbox">
     <div class="text_shown">
         <p>The Electric Love Festival conduct an absolute zero tolerance policy with regard to drugs!
             It is prohibited to use, deal or be in possession of drugs on both the festival grounds and the camping site.</p>
     </div>
 
-    <label class="collapse" for="first">First Aid</label>
+    <label class="collapse" for="first">First Aid<img class="plus_img" src="../../img/max/plus.gif"></label>
     <input id="first" type="checkbox">
     <div class="text_shown">
         <p>There are several first aid tents all over the festival area. You can see their position on the map.</p>
     </div>
 
-    <label class="collapse" for="food">First Aid</label>
+    <label class="collapse" for="food">Food and Drinks<img class="plus_img" src="../../img/max/plus.gif"></label>
     <input id="food" type="checkbox">
     <div class="text_shown">
         <p>You´re hungry? That´s no problem. There are loads of different Electric Food Bars all over the area. Payment with token.</p>
     </div>
 
-    <label class="collapse" for="forbidden">Forbidden Objects</label>
+    <label class="collapse" for="forbidden">Forbidden Objects<img class="plus_img" src="../../img/max/plus.gif"></label>
     <input id="forbidden" type="checkbox">
     <div class="text_shown">
         <p>----</p>
     </div>
 
-    <label class="collapse" for="host">Host</label>
+    <label class="collapse" for="host">Host<img class="plus_img" src="../../img/max/plus.gif"></label>
     <input id="host" type="checkbox">
     <div class="text_shown">
         <p>Revolution Event GmbH<br>
@@ -101,7 +101,7 @@
             <b>www.revolutionevent.com</b></p>
     </div>
 
-    <label class="collapse" for="rules">House Rules</label>
+    <label class="collapse" for="rules">House Rules<img class="plus_img" src="../../img/max/plus.gif"></label>
     <input id="rules" type="checkbox">
     <div class="text_shown">
         <p>In this case the general terms and conditions of the Revolution Event GmbH, the house rules of IGM Salzburgring and the extra listed festival and camping rules do apply.<br>
@@ -111,7 +111,7 @@
         </p>
     </div>
 
-    <label class="collapse" for="lost">Info/Lost&Found</label>
+    <label class="collapse" for="lost">Info/Lost&Found<img class="plus_img" src="../../img/max/plus.gif"></label>
     <input id="lost" type="checkbox">
     <div class="text_shown">
         <p>You get all relevant information about the festival, train & bus time tables and earplugs at our Info/Lost&Found Stands.<br>
@@ -123,7 +123,7 @@
             TUE-FR: 08h00 - 12h00</p>
     </div>
 
-    <label class="collapse" for="jobs">Jobs at Electric Love Festival</label>
+    <label class="collapse" for="jobs">Jobs at Electric Love Festival<img class="plus_img" src="../../img/max/plus.gif"></label>
     <input id="jobs" type="checkbox">
     <div class="text_shown">
         <p> If you want to work at Electric Love Festival applicate at<br>
@@ -131,7 +131,7 @@
             and choose your preferred job</p>
     </div>
 
-    <label class="collapse" for="liability">Liability</label>
+    <label class="collapse" for="liability">Liability<img class="plus_img" src="../../img/max/plus.gif"></label>
     <input id="liability" type="checkbox">
     <div class="text_shown">
         <p>The artists and the organisers of Electric Love Festival cannot be held accountable for damage,
@@ -141,7 +141,7 @@
             liable for personal injuries and property damage.</p>
     </div>
 
-    <label class="collapse" for="lineup">Line Up and Time Table</label>
+    <label class="collapse" for="lineup">Line Up and Time Table<img class="plus_img" src="../../img/max/plus.gif"></label>
     <input id="lineup" type="checkbox">
     <div class="text_shown">
         <p><b>Line Up Phase Number 1:</b> <a href="https://www.youtube.com/watch?v=-31HqMLFAoM" style="color: grey">https://www.youtube.com/watch?v=-31HqMLFAoM</a></p>
@@ -149,7 +149,7 @@
         <p><b>Line Up Phase Number 3:</b> <a href="https://www.youtube.com/watch?v=F_x-GfWG-Jg" style="color: grey">https://www.youtube.com/watch?v=F_x-GfWG-Jg</a></p>
     </div>
 
-    <label class="collapse" for="merch">Merchandise</label>
+    <label class="collapse" for="merch">Merchandise<img class="plus_img" src="../../img/max/plus.gif"></label>
     <input id="merch" type="checkbox">
     <div class="text_shown"><p>
         Merchandise is available at declared stands all over the festival ground. Payment with token only.
@@ -157,13 +157,13 @@
         <a href="merchandise.electriclove.at" style="color: grey"><b>merchandise.electriclove.at</b></a></p>
     </div>
 
-    <label class="collapse" for="opening">Opening Hours</label>
+    <label class="collapse" for="opening">Opening Hours<img class="plus_img" src="../../img/max/plus.gif"></label>
     <input id="opening" type="checkbox">
     <div class="text_shown"><p>
         tba assap</p>
     </div>
 
-    <label class="collapse" for="disability">People with Disabilities</label>
+    <label class="collapse" for="disability">People with Disabilities<img class="plus_img" src="../../img/max/plus.gif"></label>
     <input id="disability" type="checkbox">
     <div class="text_shown"><p>
         People with physical disabilities can also join the Electric Love Festival. More information under:<br>
@@ -171,45 +171,45 @@
         <b>info@electriclove.at</b></p>
     </div>
 
-    <label class="collapse" for="receive">Receiving Inspection</label>
+    <label class="collapse" for="receive">Receiving Inspection<img class="plus_img" src="../../img/max/plus.gif"></label>
     <input id="receive" type="checkbox">
     <div class="text_shown"><p>
         There will be controls on forbidden objects, passports and your wristband at all entries at the festival area.
         Please understand that the securities will check your luggage. Do not loose your wristband and the garbage chip - no replacement will happen.</p>
     </div>
 
-    <label class="collapse" for="shuttle">Shuttle Service</label>
+    <label class="collapse" for="shuttle">Shuttle Service<img class="plus_img" src="../../img/max/plus.gif"></label>
     <input id="shuttle" type="checkbox">
     <div class="text_shown"><p>
         There is a shuttle service from the train station Salzburg to the festival ground for free. Time table tba.</p>
     </div>
 
-    <label class="collapse" for="stages">Stages</label>
+    <label class="collapse" for="stages">Stages<img class="plus_img" src="../../img/max/plus.gif"></label>
     <input id="stages" type="checkbox">
     <div class="text_shown"><p>
         tba assap</p>
     </div>
 
-    <label class="collapse" for="warm">Warm Up Party</label>
+    <label class="collapse" for="warm">Warm Up Party<img class="plus_img" src="../../img/max/plus.gif"></label>
     <input id="warm" type="checkbox">
     <div class="text_shown"><p>
         A Warm Up Party will take place on Wednesday - Line Up and Stage tba.</p>
     </div>
 
-    <label class="collapse" for="faq">Got no answer in the FAQ?</label>
+    <label class="collapse" for="faq">Got no answer in the FAQ?<img class="plus_img" src="../../img/max/plus.gif"></label>
     <input id="faq" type="checkbox">
     <div class="text_shown"><p>
         Make sure to check the FAQ before contacting us. Other questions, that are not answered in the FAQ, can be send to:<br>
         <b style="color: grey">info@electriclove.at</b></p>
     </div>
 
-    <label class="collapse" for="wifi">Wifi</label>
+    <label class="collapse" for="wifi">Wifi<img class="plus_img" src="../../img/max/plus.gif"></label>
     <input id="wifi" type="checkbox">
     <div class="text_shown"><p>There is free wifi available at certain spots all over the festival area.</p>
     </div>
 
 
-    <label class="collapse" for="youth">Youth Protection/Age Restriction</label>
+    <label class="collapse" for="youth">Age Restriction<img class="plus_img" src="../../img/max/plus.gif"></label>
     <input id="youth" type="checkbox">
     <div class="text_shown"><p> The minimum age limit for entry to the festival area and the camping area is 16.
         Even if accompanied by an adult, people 15 and under will not be permitted entrance. The Salzburg Youth
