--- a/sites/faqSites/tickets.html
+++ b/sites/faqSites/tickets.html
@@ -33,7 +33,7 @@
         <div class="col-xs-4 header_back"></div>
     </div>
 
-    <label class="collapse" for="camping">Camping Tickets</label>
+    <label class="collapse" for="camping">Camping Tickets<img class="plus_img" src="../../img/max/plus.gif"></label>
     <input id="camping" type="checkbox">
     <div class="text_shown"><p><b>Basic Camping Ticket - North & South</b></p>
         <p>€ 34,00 per person (valid from Wed. 08.07.2015 / 12h00 to Sun. 12.07.2015 / 15h00)</p>
@@ -76,7 +76,7 @@
         <p><b>Parking Ticket North</b>
         € 10,00 per vehicle</p></div>
 
-    <label class="collapse" for="festival">Festival Tickets</label>
+    <label class="collapse" for="festival">Festival Tickets<img class="plus_img" src="../../img/max/plus.gif"></label>
     <input id="festival" type="checkbox">
     <div class="text_shown">
         <p><b>Festival Pass - € 99,00</b></p>
@@ -115,23 +115,23 @@
         <p>€ 95,00 per bag (5% discount)
         Those token have a different design and cannot be changed back due to the discount.</p></div>
 
-    <label class="collapse" for="mail">Confirmation Mail</label>
+    <label class="collapse" for="mail">Confirmation Mail<img class="plus_img" src="../../img/max/plus.gif"></label>
     <input id="mail" type="checkbox">
     <div class="text_shown">We apologise if you have not received the preregistration e-mail.
         Please contact our ticket provider for fast help -
         <b>costumerservice@palogic.com</b></div>
 
-    <label class="collapse" for="name">My name is not on the ticket</label>
+    <label class="collapse" for="name">My name is not on the ticket<img class="plus_img" src="../../img/max/plus.gif"></label>
     <input id="name" type="checkbox">
     <div class="text_shown"><p>The name on your online ticket is not relevant at validation.
         You can easily give your ticket to a friend or resell it.</p></div>
 
-    <label class="collapse" for="day">Day Ticket</label>
+    <label class="collapse" for="day">Day Ticket<img class="plus_img" src="../../img/max/plus.gif"></label>
     <input id="day" type="checkbox">
     <div class="text_shown"><p>There will be day tickets available so far the
         Electric Love Festival is not already sold out in spring 2015.</p></div>
 
-    <label class="collapse" for="return">Return Ticket</label>
+    <label class="collapse" for="return">Return Ticket<img class="plus_img" src="../../img/max/plus.gif"></label>
     <input id="return" type="checkbox">
     <div class="text_shown"><p>Cancelling your ticket after the purchase is not possible.
         But since your ticket is not personalized you can easily give it away or resell it.</p></div>
