--- a/sites/faqSites/travel.html
+++ b/sites/faqSites/travel.html
@@ -34,7 +34,7 @@
         <div class="col-xs-4 header_back"></div>
     </div>
 
-    <label class="collapse" for="car">by Car</label>
+    <label class="collapse" for="car">by Car<img class="plus_img" src="../../img/max/plus.gif"></label>
     <input id="car" type="checkbox">
     <div class="text_shown">
         <p><b>Visitors from Austria</b></p>
@@ -64,7 +64,7 @@
             mind the different colors for the different areas.</p>
         </div>
 
-    <label class="collapse" for="plane">by Plane</label>
+    <label class="collapse" for="plane">by Plane<img class="plus_img" src="../../img/max/plus.gif"></label>
     <input id="plane" type="checkbox">
     <div class="text_shown">
         <p>There are several direct flights from european cities to Salzburg airport. Check them out on
@@ -72,7 +72,7 @@
         </p>
     </div>
 
-    <label class="collapse" for="bus">by Bus</label>
+    <label class="collapse" for="bus">by Bus<img class="plus_img" src="../../img/max/plus.gif"></label>
     <input id="bus" type="checkbox">
     <div class="text_shown">
         <p>Some travel organisations offer a full service trip by bus to the Electric Love Festival. Details tba. <br>
@@ -80,7 +80,7 @@
             <b>info@electriclove.at</b></p>
     </div>
 
-    <label class="collapse" for="train">by Train</label>
+    <label class="collapse" for="train">by Train<img class="plus_img" src="../../img/max/plus.gif"></label>
     <input id="train" type="checkbox">
     <div class="text_shown">
         <p>Get to Salzburg Main Station and there are shuttle buses waiting for you to pick
