--- a/sites/information.html
+++ b/sites/information.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="../css/bootstrap-theme.min.css" type="text/css"/>
     <link rel="stylesheet" href="../css/bootstrap.css" type="text/css"/>
     <link rel="stylesheet" href="../css/normalize.css" type="text/css"/>
-    <link rel="stylesheet" href="../css/news.css" type="text/css"/>
+    <link rel="stylesheet" href="../css/information.css" type="text/css"/>
     <link rel="stylesheet" href="../css/styles.css" type="text/css"/>
 
 
@@ -58,10 +58,6 @@
 
                 </div>
             </section>
-            <section id="news">
-                <h2><a href="#news">News</a></h2>
-                <p></p>
-            </section>
             <section id="homepage">
                 <h2><a href="#homepage">Homepage</a></h2>
                 <p>Stay tuned and checkout our homepage!</p>
@@ -73,6 +69,19 @@
                 <p>Fax: +43 (0)6245 70 79 366</p>
                 <p>E-Mail: info@revolutionevent.com</p>
             </section>
+            <section id="partner">
+                <h2><a href="#partner">Offical Partners</a></h2>
+                <div class="row">
+                    <form action="http://www.redbull.com/at/de" class="col-xs-6">
+                        <img src="../img/logos/rb_neu.jpg" >
+                    </form>
+                    <form action="http://www.redbull.com/at/de" class="col-xs-6">
+                    <img src="../img/logos/rb_neu.jpg" >
+                    </form>
+                </div>
+
+            </section>
+
         </div>
     </div>
 
