--- a/sites/rules.html
+++ b/sites/rules.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" href="../css/news.css" type="text/css"/>
+    <link rel="stylesheet" href="../css/information.css" type="text/css"/>
 </head>
 <body>
 
