--- a/sites/information.html
+++ b/sites/information.html
@@ -69,15 +69,24 @@
                 <p>Fax: +43 (0)6245 70 79 366</p>
                 <p>E-Mail: info@revolutionevent.com</p>
             </section>
-            <section id="partner">
+            <section id="partner" style="overflow-y: scroll">
                 <h2><a href="#partner">Offical Partners</a></h2>
+
                 <div class="row">
-                   <img src="../img/logos/rb_neu.jpg" >
-                    </form>
-                    <form action="http://www.redbull.com/at/de" class="col-xs-6">
+                       <img src="../img/logos/rb_neu.jpg" >
+                        </form>
+                        <form action="http://www.redbull.com/at/de" class="col-xs-6">
+                        <img src="../img/logos/rb_neu.jpg" >
+                        </form>
+                </div>
+                <div class="row">
                     <img src="../img/logos/rb_neu.jpg" >
                     </form>
+                    <form action="http://www.redbull.com/at/de" class="col-xs-6">
+                        <img src="../img/logos/rb_neu.jpg" >
+                    </form>
                 </div>
+
 
             </section>
 
