--- a/sites/information.html
+++ b/sites/information.html
@@ -69,25 +69,53 @@
                 <p>Fax: +43 (0)6245 70 79 366</p>
                 <p>E-Mail: info@revolutionevent.com</p>
             </section>
-            <section id="partner" style="overflow-y: scroll">
+            <section id="partner">
                 <h2><a href="#partner">Offical Partners</a></h2>
 
-                <div class="row">
-                       <img src="../img/logos/rb_neu.jpg" >
-                        </form>
-                        <form action="http://www.redbull.com/at/de" class="col-xs-6">
-                        <img src="../img/logos/rb_neu.jpg" >
-                        </form>
+                <div class="outer">
+                    <ul>
+                        <li>
+                            <div class="inner">
+                                <a href="http://www.google.at"><img src="../img/logos/rb_neu.jpg"></a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="inner">
+                                <a href="http://www.google.at"><img src="../img/logos/oebb_banner.png"></a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="inner">
+                                <a href="http://www.google.at"><img src="../img/logos/heineken.jpg"></a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="inner">
+                                <a href="http://www.google.at"><img src="../img/logos/eristof_banner.png"></a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="inner">
+                                <a href="http://www.google.at"><img src="../img/logos/krone_trans.png"></a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="inner">
+                                <a href="http://www.google.at"><img src="../img/logos/club_trans.png"></a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="inner">
+                                <a href="http://www.google.at"><img src="../img/logos/sltbanner.png"></a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="inner">
+                                <a href="http://www.google.at"><img src="../img/logos/kronehit-teaser.jpg"></a>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
-                <div class="row">
-                    <img src="../img/logos/rb_neu.jpg" >
-                    </form>
-                    <form action="http://www.redbull.com/at/de" class="col-xs-6">
-                        <img src="../img/logos/rb_neu.jpg" >
-                    </form>
-                </div>
-
-
             </section>
 
         </div>
