--- a/sites/information.html
+++ b/sites/information.html
@@ -73,45 +73,46 @@
                 <h2><a href="#partner">Offical Partners</a></h2>
 
                 <div class="outer">
-                    <ul>
+                    <ul style="">
                         <li>
                             <div class="inner">
-                                <a href="http://www.google.at"><img src="../img/logos/rb_neu.jpg"></a>
+                                <a href="http://energydrink-at.redbull.com/"><img src="../img/logos/rb_neu.jpg" class="logo_height"></a>
                             </div>
                         </li>
                         <li>
                             <div class="inner">
-                                <a href="http://www.google.at"><img src="../img/logos/oebb_banner.png"></a>
+                                <a href="http://www.oebb.at/"><img src="../img/logos/oebb_banner.png" class="logo_height"></a>
                             </div>
                         </li>
                         <li>
                             <div class="inner">
-                                <a href="http://www.google.at"><img src="../img/logos/heineken.jpg"></a>
+                                <a href="http://www.heineken.com/AgeGateway.aspx"><img src="../img/logos/heineken.jpg" class="logo_height"></a>
                             </div>
                         </li>
                         <li>
                             <div class="inner">
-                                <a href="http://www.google.at"><img src="../img/logos/eristof_banner.png"></a>
+                                <a href="http://www.eristoff.com/at/lda"><img src="../img/logos/eristof_banner.png" class="logo_height"></a>
                             </div>
                         </li>
                         <li>
                             <div class="inner">
-                                <a href="http://www.google.at"><img src="../img/logos/krone_trans.png"></a>
+                                <a href="http://www.krone.at/"><img src="../img/logos/krone_trans.png" class="logo_height"></a>
                             </div>
                         </li>
                         <li>
                             <div class="inner">
-                                <a href="http://www.google.at"><img src="../img/logos/club_trans.png"></a>
+                                <a href="http://www.raiffeisenclub.at/eBusiness/01_template1/832356855794358399-NA-NA-NA-40-NA.html"><img src="../img/logos/club_trans.png" class="logo_height"></a>
                             </div>
                         </li>
                         <li>
                             <div class="inner">
-                                <a href="http://www.google.at"><img src="../img/logos/sltbanner.png"></a>
+                                <a href="http://booking.salzburgerland.com/?utm_campaign=kooperationen_2014&utm_source=electriclove.
+                                at&utm_medium=kooperation&utm_content=banner&utm_market=at"><img src="../img/logos/sltbanner.png" class="logo_height"></a>
                             </div>
                         </li>
                         <li>
                             <div class="inner">
-                                <a href="http://www.google.at"><img src="../img/logos/kronehit-teaser.jpg"></a>
+                                <a href="http://www.kronehit.at/kronehit-at-clubs/electric-love-festival-2014/"><img src="../img/logos/kronehit-teaser.jpg" class="logo_height"></a>
                             </div>
                         </li>
                     </ul>
