--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
     <div id="everything" class="container">
         <div id="main" class="element">
             <div class="col-xs-12 icon_name" style="margin-bottom: 20px">
-                <img src="img/logo_name.gif" style="width: 250px; height: 53px"/>
+                <img src="img/main/logo_name.gif" style="width: 250px; height: 53px"/>
             </div>
 
             <div class="row" style="margin-bottom: 20px">
                 <div class="col-xs-4" style="padding: 0px"><a href="sites/timetable.html"><img class="item_main" src="img/max/timetable.gif"></a></div>
-                <div class="col-xs-4" style="padding: 0px"><a href="sites/countdown.html"><img class="item_main spining" src="img/logo_max.gif"></a></div>
+                <div class="col-xs-4" style="padding: 0px"><a href="sites/countdown.html"><img class="item_main spining" src="img/main/logo_max.gif"></a></div>
                 <div class="col-xs-4" style="padding: 0px"><a id="map" href="sites/test.html"><img class="item_main" src="img/max/maps.gif"></a></div>
             </div>
             <div class="row">
