--- a/sites/information.html
+++ b/sites/information.html
@@ -61,10 +61,11 @@
             <section id="homepage">
                 <h2><a href="#homepage">Homepage</a></h2>
                 <p>Stay tuned and checkout our homepage!</p>
-                <p><a href="https://electriclove.at"><img src="../img/logo_name_black.gif" style="height: 45px; width: 211px;"></a></p>
+                <p><a href="https://electriclove.at"><img src="../img/max/logo_name_black.gif" style="height: 45px; width: 211px;"
+                        onmouseover="this.src='../img/max/logo_name_darkblue.gif'"
+                        onmouseout="this.src='../img/max/logo_name_black.gif'"/></a></p>
             </section>
-            <section id="contact">
-                <h2><a href="#contact">Contact</a></h2>
+            <section id="contact">             <h2><a href="#contact">Contact</a></h2>
                 <p>Telephone: +43 (0)6245 71 990</p>
                 <p>Fax: +43 (0)6245 70 79 366</p>
                 <p>E-Mail: info@revolutionevent.com</p>
