--- a/sites/information.html
+++ b/sites/information.html
@@ -62,7 +62,7 @@
                 <h2><a href="#homepage">Homepage</a></h2>
                 <p>Stay tuned and checkout our homepage!</p>
                 <p><a href="https://electriclove.at"><img src="../img/max/logo_name_black.gif" style="height: 45px; width: 211px;"
-                        onmouseover="this.src='../img/max/logo_name_darkblue.gif'"
+                        onmouseover="this.src='../img/max/logo_name_lightblue.gif'"
                         onmouseout="this.src='../img/max/logo_name_black.gif'"/></a></p>
             </section>
             <section id="contact">             <h2><a href="#contact">Contact</a></h2>
@@ -74,7 +74,7 @@
                 <h2><a href="#partner">Offical Partners</a></h2>
 
                 <div class="outer">
-                    <ul style="">
+                    <ul style="margin-top: 5px">
                         <li>
                             <div class="inner">
                                 <a href="http://energydrink-at.redbull.com/"><img src="../img/logos/rb_neu.jpg" class="logo_height"></a>
