--- a/sites/countdown.html
+++ b/sites/countdown.html
@@ -30,6 +30,9 @@
         </div>
         <div class="countdown clocktext">TIME LEFT TILL<br>ELF 15
             <div class="clockbox" id="clock"></div>
+
+                <p style="margin-bottom: 0px"><b>9. - 11. July 2015</b></p>
+                <b>Salzburgring, Austria</b>
         </div>
 
     </div>
