--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
             <div class="row" style="margin-bottom: 20px">
                 <div class="col-xs-4" style="padding: 0px"><a href="sites/timetable.html"><img class="item_main" src="img/max/timetable.gif"></a></div>
-                <div class="col-xs-4" style="padding: 0px"><a href="sites/countdown.html"><img class="item_main spining" src="img/main/logo_max.gif"></a></div>
+                <div class="col-xs-4" style="padding: 0px"><a href="sites/countdown.html"><img class="item_main spinning" src="img/main/logo_max.gif"></a></div>
                 <div class="col-xs-4" style="padding: 0px"><a id="map" href="sites/test.html"><img class="item_main" src="img/max/maps.gif"></a></div>
             </div>
             <div class="row">
