information changes social media hover effect

--- a/sites/information.html
+++ b/sites/information.html
@@ -33,9 +33,15 @@
             <section id="socialMedia">
                 <h2><a href="#socialMedia">Social Media</a></h2>
                 <p>Visit us on:</p>
-                <span><a href="https://www.youtube.com/channel/UC1yhsZ5dZUEJHVkr5opPT-g"><img src="../img/max/youtube.gif" class="img_accordion"/></a> </span>
-                <span><a href="https://twitter.com/electricloveaut"><img src="../img/max/twitter.gif" class="img_accordion"/></a> </span>
-                <span><a href="https://www.facebook.com/electriclovefestival"><img src="../img/max/facebook.gif" class="img_accordion"/></a> </span>
+                <span><a href="https://www.youtube.com/channel/UC1yhsZ5dZUEJHVkr5opPT-g"><img src="../img/max/youtube.gif" class="img_accordion"
+                      onmouseover="this.src='../img/max/youtube_hover.gif'"
+                      onmouseout="this.src='../img/max/youtube.gif'"/></a> </span>
+                <span><a href="https://twitter.com/electricloveaut"><img src="../img/max/twitter.gif" class="img_accordion"
+                      onmouseover="this.src='../img/max/twitter_hover.gif'"
+                      onmouseout="this.src='../img/max/twitter.gif'"/></a> </span>
+                <span><a href="https://www.facebook.com/electriclovefestival"><img src="../img/max/facebook.gif" class="img_accordion"
+                      onmouseover="this.src='../img/max/facebook_hover.gif'"
+                      onmouseout="this.src='../img/max/facebook.gif'"/></a> </span>
             </section>
             <section id="faq">
                 <h2><a href="#faq">FAQ</a></h2>
@@ -61,7 +67,7 @@
             <section id="homepage">
                 <h2><a href="#homepage">Homepage</a></h2>
                 <p>Stay tuned and checkout our homepage!</p>
-                <p><a href="https://electriclove.at"><img src="../img/max/logo_name_black.gif" style="height: 45px; width: 211px;"
+                <p><a href="https://electriclove.at"><img src="../img/max/logo_name_black.gif" id="logo" style="height: 45px; width: 211px;"
                         onmouseover="this.src='../img/max/logo_name_lightblue.gif'"
                         onmouseout="this.src='../img/max/logo_name_black.gif'"/></a></p>
             </section>
