--- a/sites/information.html
+++ b/sites/information.html
@@ -25,7 +25,7 @@
 
 <body>
 
-    <div id="everything" class="content-info" style="padding: 5px; text-align: center">
+    <div id="everything" class="content-info">
         <a class="col-xs-12 header_back" href="../index.html"><img class="clocknavbtn" src="../img/max/arrow_left_home.gif" style="height: 30px; width: 152px"></a>
 
 
