--- a/sites/countdown.html
+++ b/sites/countdown.html
@@ -23,20 +23,27 @@
 </head>
 
 <body>
-<div id="everything" class="container">
-    <div id="main" class="element">
-        <div class="col-xs-12 header_back"  onclick="history.go(-1);return true;">
-            <img class="clocknavbtn" src="../img/max/arrow_left_home.gif" style="height: 30px; width: 152px">
-        </div>
-        <div class="countdown clocktext">TIME LEFT TILL<br>ELF 15
+    <div id="everything" class="content-info ">
+        <a class="col-xs-12 header_back" href="../index.html"><img class="clocknavbtn" src="../img/max/arrow_left_home.gif" style="height: 30px; width: 152px"></a>
+            <img src="../img/max/clock.gif" class="clock_spinning" style="height: auto; width: 80%; max-width: 400px"/>
+        <div class="clocktext" style="position: relative; width: 50%; margin-right: auto; margin-left: auto; margin-top: -300px; height: 100px; text-align: center">
+            <div class="visible-sm visible-md visible-lg">Time until Electric Love 2015</div>
             <div class="clockbox" id="clock"></div>
-
-                <p style="margin-bottom: 0px"><b>9. - 11. July 2015</b></p>
-                <b>Salzburgring, Austria</b>
+            <p style="margin-bottom: 0px"><b>9. - 11. July 2015</b></p>
+            <b>Salzburgring, Austria</b>
         </div>
 
     </div>
-</div>
 </body>
 
 </html>
+
+
+
+<!--
+           <div class="clocktext">TIME LEFT TILL<br>ELF 15
+                <div class="clockbox" id="clock"></div>
+                <p style="margin-bottom: 0px"><b>9. - 11. July 2015</b></p>
+                <b>Salzburgring, Austria</b>
+            </div>
+-->
