--- a/sites/rules.html
+++ b/sites/rules.html
@@ -3,30 +3,12 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" href="../css/information.css" type="text/css"/>
+    <link rel="stylesheet" href="../css/styles.css" type="text/css"/>
 </head>
 <body>
-
-<p>
-    <a href="javascript:;" onclick="$('#AccDemo3')".toggleClass('hidden');">Toggle</a>
-</p>
-<div id="AccDemo3" class="acc-demo-3">Wussl</div>
-
-<!--
-<div id="nav" class="tran1">
-    <h2>Contents</h2>
-
-    <a href="#" class="hide">close</a>
-    <a href="#" class="show">Social Media</a>
-    <div id="test" class="tran1">
-        <a href="https://www.youtube.com/channel/UC1yhsZ5dZUEJHVkr5opPT-g"><button class="btn btn-info" type="button"><img src="../img/max/youtube.gif" style="height: 25px; width: 25px"/></button></a>
-        <a href="https://www.facebook.com/electriclovefestival"><button class="btn btn-info" type="button"><img src="../img/max/facebook.gif" style="height: 25px; width: 25px"/></button></a>
-        <a href="https://twitter.com/electricloveaut"><button class="btn btn-info" type="button"><img src="../img/max/twitter.gif" style="height: 25px; width: 25px"/></button></a>
+    <div class="outer" style="width: 100%; margin-right: auto; margin-left: auto; height: 400px; text-align: center">
+        <img src="../img/max/clock.gif" class="clock_spinning" style="height: auto; width: 80%"/>
+        <div class="inner" style="position: relative; width: 50%; margin-right: auto; margin-left: auto; margin-top: -200px; background-color: grey; height: 100px; text-align: center"></div>
     </div>
-
-
-</div>
-
--->
 </body>
 </html>
