--- a/loadtest/page1.html
+++ b/loadtest/page1.html
@@ -13,11 +13,12 @@
 </head>
 <body>
 
-    <div class="main">
-        <a href="page2.html" class="transition">Page2</a>
+    <div id="main" class="main">
+        <a href="page2.html">Page2</a>
     </div>
+    <button class="test">Press</button>
 
-    <button onclick="fadeoutfunc">PRESS</button>
+
 
 
 </body>
