--- a/loadtest/page1.html
+++ b/loadtest/page1.html
@@ -14,9 +14,8 @@
 <body>
 
     <div id="main" class="main">
-        <a href="page2.html">Page2</a>
+        <a href="page2.html"><button class="press">Press</button></a>
     </div>
-    <button class="test">Press</button>
 
 
 
