--- a/loadtest/page2.html
+++ b/loadtest/page2.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="main2">
-        <a href="page1.html">Page1</a>
+        <a href="page1.html"><button class="press">Press</button></a>
 
     </div>
 </body>
