--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
             </div>
 
             <div class="row" style="margin-bottom: 20px">
-                <div class="col-xs-4" style="padding: 0px"><a href="sites/timetable.html"><img class="item_main" src="img/max/timetable.gif"></a></div>
-                <div class="col-xs-4" style="padding: 0px"><a href="sites/countdown.html"><img class="item_main spinning" src="img/main/logo_max.gif"></a></div>
-                <div class="col-xs-4" style="padding: 0px"><a id="map" href="sites/google.html"><img class="item_main" src="img/max/maps.gif"></a></div>
+                <div class="col-xs-4" style="padding: 0px"><a class="link" href="sites/timetable.html"><img class="item_main" src="img/max/timetable.gif"></a></div>
+                <div class="col-xs-4" style="padding: 0px"><a class="link" href="sites/countdown.html"><img class="item_main spinning" src="img/main/logo_max.gif"></a></div>
+                <div class="col-xs-4" style="padding: 0px"><a class="link" href="sites/google.html"><img class="item_main" src="img/max/maps.gif"></a></div>
             </div>
             <div class="row">
-                <div class="col-xs-4" style="padding: 0px"><a href="sites/information.html"><img class="item_main" src="img/max/info.gif"></a></div>
-                <div class="col-xs-4" style="padding: 0px"><a href="sites/artists.html"><img class="item_main" src="img/max/dj.gif"></a></div>
-                <div class="col-xs-4" style="padding: 0px"><a href="#"><img class="item_main" src="img/max/food.gif"></a></div>
+                <div class="col-xs-4" style="padding: 0px"><a class="link" href="sites/information.html"><img class="item_main" src="img/max/info.gif"></a></div>
+                <div class="col-xs-4" style="padding: 0px"><a class="link" href="sites/artists.html"><img class="item_main" src="img/max/dj.gif"></a></div>
+                <div class="col-xs-4" style="padding: 0px"><a class="link" href="#"><img class="item_main" src="img/max/food.gif"></a></div>
             </div>
 
         </div>
