--- a/loadtest/page1.html
+++ b/loadtest/page1.html
@@ -14,7 +14,7 @@
 <body>
 
     <div id="main" class="main">
-        <a href="page2.html"><button class="press">Press</button></a>
+        <a class="logo" href="page2.html"><img src="../img/max/logo_name_darkblue.gif" style="height: 30px; width: 70px"/></a>
     </div>
 
 
