--- a/loadtest/page2.html
+++ b/loadtest/page2.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="testmain.css" type="text/css"/>
 </head>
 <body>
-    <div class="main2">
-        <a href="page1.html"><button class="press">Press</button></a>
+    <div id="ma" class="main2">
+        <a class="logo" href="page1.html"><img src="../img/max/logo_name_darkblue.gif" style="height: 30px; width: 70px"/></a>
 
     </div>
 </body>
