--- a/sites/countdown.html
+++ b/sites/countdown.html
@@ -7,9 +7,9 @@
     <!-- Bootstrap init -->
     <script src="../js/jquery-1.11.2.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
-    <script src="../js/jquery.countdown-2.0.4/jquery.countdown.js"></script>
     <script src="../js/jquery.countdown-2.0.4/jquery.countdown.min.js"></script>
     <script src="../js/jquery.countdown-2.0.4/time.js"></script>
+    <script src="../js/main.js"></script>
 
     <!-- Styles init -->
     <link rel="stylesheet" href="../css/bootstrap.min.css" type="text/css">
