--- a/sites/countdown.html
+++ b/sites/countdown.html
@@ -24,7 +24,7 @@
 
 <body>
     <div id="everything" class="content-info ">
-        <a class="col-xs-12 header_back" href="../index.html"><img class="clocknavbtn" src="../img/max/arrow_left_home.gif" style="height: 30px; width: 152px"></a>
+        <a class="col-xs-12 header_back link" href="../index.html"><img class="clocknavbtn" src="../img/max/arrow_left_home.gif" style="height: 30px; width: 152px"></a>
             <img src="../img/max/clock.gif" class="clock_spinning" style="height: auto; width: 80%; max-width: 400px"/>
         <div class="clocktext" style="position: relative; width: 50%; margin-right: auto; margin-left: auto; margin-top: -300px; height: 100px; text-align: center">
             <div class="visible-sm visible-md visible-lg">Time until Electric Love 2015</div>
