--- a/sites/faqSites/camping.html
+++ b/sites/faqSites/camping.html
@@ -26,7 +26,7 @@
 
     <div id="everything" class="content-info" style="padding: 5px; text-align: center">
         <div class="row" style="padding: 0px; margin: 0px">
-            <div class="col-xs-4 header_back" onclick="history.go(-1);return true;">
+            <div class="col-xs-4 header_back link" onclick="history.go(-1);return true;">
                <img src="../../img/max/arrow_left_back.gif" style="height: 30px; width: 86px">
             </div>
             <div class="col-xs-4 header_back header_title" style="text-align: center">CAMPING</div>
