--- a/sites/information.html
+++ b/sites/information.html
@@ -26,7 +26,7 @@
 <body>
 
     <div id="everything" class="content-info">
-        <a class="col-xs-12 header_back" href="../index.html"><img class="clocknavbtn" src="../img/max/arrow_left_home.gif" style="height: 30px; width: 152px"></a>
+        <a class="col-xs-12 header_back link" href="../index.html"><img class="clocknavbtn" src="../img/max/arrow_left_home.gif" style="height: 30px; width: 152px"></a>
 
 
         <div class="accordion vertical">
