--- a/sites/artists.html
+++ b/sites/artists.html
@@ -26,13 +26,19 @@
 <body>
 
     <div id="everything" class="content-info" style="padding: 5px">
-        <div class="col-xs-12 header_back">
-            <a class="link" href="../index.html"><img class="clocknavbtn" src="../img/max/arrow_left_home.gif" style="height: 30px; width: 152px"></a>
+        <a class="col-xs-12 header_back" href="../index.html"><img class="clocknavbtn" src="../img/max/arrow_left_home.gif" style="height: 30px; width: 152px"></a>
+
+        <div class="row artist_text">
+            <div class="col-xs-2 artist_container"><img src="../img/djs/hardwell.jpg" class="artist_img"/> </div>
+            <div class="col-xs-10 artist_container">Text wall of text</div>
         </div>
-        <div class="row" style="padding: 0px 15px 0px 15px">
-            <div class="col-xs-3 artist_container" style="background-image: url('../img/max/youtube_hover.gif'); background-size: contain; background-repeat: no-repeat"></div>
-            <div class="col-xs-6 artist_container"></div>
-            <div class="col-xs-3 artist_container"></div>
+        <div class="row artist_text">
+            <div class="col-xs-2 artist_container"><img src="../img/djs/aoki.jpg" class="artist_img"/></div>
+            <div class="col-xs-10 artist_container">Text wall of text</div>
+        </div>
+        <div class="row artist_text">
+            <div class="col-xs-2 artist_container"><img src="../img/djs/romero.jpg" class="artist_img"/> </div>
+            <div class="col-xs-10 artist_container">Text wall of text</div>
         </div>
     </div>
 
